hphp/test/quick/dv_af.php.expectf

Fatal error: Default value for parameter a1 with type Double needs to have the same type as the type hint HH\arraylike in %s on line 3
